add_executable(PFHub1a_Periodic PFHub1a_Periodic.cpp)
target_link_libraries(PFHub1a_Periodic LINK_PUBLIC CabanaPF)
add_executable(PFHub1a_Benchmark PFHub1a_Benchmark.cpp)
target_link_libraries(PFHub1a_Benchmark LINK_PUBLIC CabanaPF)
add_executable(PerformanceRuns GridTimer.cpp)
target_link_libraries(PerformanceRuns LINK_PUBLIC CabanaPF)
